--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sample_time">0 minutes</string>
     <string name="delete_all_notes">Delete All Notes</string>
     <string name="delete_action">Delete</string>
+    <string name="ago">ago</string>
 </resources>
