--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="delete_all_notes">Delete All Notes</string>
     <string name="delete_action">Delete</string>
     <string name="ago">ago</string>
+    <string name="about_text">About</string>
+    <string name="about_content_text">Made by: \n Discord: Smese #1819 \n Using MVVM, coroutines, room and \n Nav component </string>
 </resources>
